js/js.translator/testData/incremental/invalidation/fakeOverrideInheritanceWithCrossModuleInliner/lib1/B.0.kt
abstract class AbstractClassB : AbstractClassA() {
    inline fun funB() = "b-0 ${funA()}"
}
